--- a/assets/speech/index.html
+++ b/assets/speech/index.html
@@ -40,7 +40,25 @@
 
 <!-- main -->
   <main>
-
+    <article class="main-wapper">
+      <h1 class="speech-title"></h1>
+      <scction class="speech-section">
+        <h2 class="speech-subtitle"></h2>
+        <div class="speech-box">
+          <div class="speech-items">
+            <figure>
+              <img src="" alt="">
+            </figure>
+            <p class="speech-contents"></p>
+          </div>
+          <div class="speech-items"></div>
+        </div>
+        <div class="speech-box">
+          <div class="speech-items"></div>
+          <div class="speech-items"></div>
+        </div>
+      </scction>
+    </article>
   </main>
 
 <!-- footer -->
