--- a/index.html
+++ b/index.html
@@ -44,48 +44,50 @@
   <main class="main-section">
     <section class="seventh-habit">
       <div class="background">
+        <img src="./assets/img/covey.png" alt="" >
+        <h1 class="top-title">7つの習慣</h1>
         <div class="habit-both-side">
-          <h1 class="top-title">7つの習慣</h1>
           <div class="habit-left-side">
             <ul class="habit-list">
               <li class="habit-items" id="habit-1">
-                <h2 class="habit-title">主体的である</h2>
+                <h2 class="habit-title">第1の習慣:主体的である</h2>
                 <p class="habit-contents">自らの価値観に従って行動を選択する</p>
               </li>
               <li class="habit-items" id="habit-3">
-                <h2 class="habit-title">最優先事項を優先する</h2>
+                <h2 class="habit-title">第3の習慣:最優先事項を優先する</h2>
                 <p class="habit-contents">「緊急度は低いけれども、重要度は高い」という第２領域をたくさん実行する</p>
               </li>
               <li class="habit-items" id="habit-5">
-                <h2 class="habit-title">まず理解に徹し、そして理解される</h2>
+                <h2 class="habit-title">第5の習慣:まず理解に徹し、そして理解される</h2>
                 <p class="habit-contents">相手の話を共感しながら聞く、という事を心がける</p>
               </li>
               <li class="habit-items" id="habit-7">
-                <h2 class="habit-title">再新再生の習慣</h2>
-                <p class="habit-contents">第1から第6までの習慣を身につけ、<br>さらにこれら4つの側面を磨きづつけることで、<br>人格主義に基づいた成長の螺旋階段を登り続けることが出来る</p>
+                <h2 class="habit-title">第7の習慣:再新再生の習慣</h2>
+                <p class="habit-contents">第1から第6までの習慣を身につけ、<br>さらにこれら4つの側面を磨きづつけることで  <br>人格主義に基づいた成長の螺旋階段を登り続けることが出来る</p>
               </li>
             </ul>
           </div>
           <div class="habit-right-side">
             <ul class="habit-list">
               <li class="habit-items" id="habit-2">
-                <h2 class="habit-title">終わりを思い描くことから始める</h2>
-                <p class="habit-contents">①どのような人間になりたいのか<br>②人生を通じて何をしたいのか<br>
-                  ③それらの土台となるような価値観はなにか</p>
+                <h2 class="habit-title">第2の習慣:終わりを思い描くことから始める</h2>
+                <p class="habit-contents">①どのような人間になりたい  か<br>②人生を通じて何をしたいのか<br>
+                    ③それらの土台となるような価値観はなにか</p>
               </li>
               <li class="habit-items" id="habit-4">
-                <h2 class="habit-title">Win-Winを考える</h2>
-                <p class="habit-contents">お互い同士の利益になるような結果を見つけようとする考え方と姿勢</p>
+                <h2 class="habit-title">第4の習慣:Win-Winを考える</h2>
+                <p class="habit-contents">お互い同士の利益になるよ  な結果を見つけようとする考え方と姿勢</p>
               </li>
               <li class="habit-items" id="habit-6">
-                <h2 class="habit-title">シナジーをつくりだす</h2>
-                <p class="habit-contents">①お互いが自立し合っている事<br>②win-winを考えられる事<br>③お互いが違いを受け入れ尊重し合っている事</p>
+                <h2 class="habit-title">第6の習慣:シナジーをつくりだす</h2>
+                <p class="habit-contents">①お互いが自立し合っている  <br>②win-winを考えられる事<br>③お互いが違いを受け入  尊重し合っている事</p>
               </li>
             </ul>
           </div>
         </div>
       </div>
     </section>
+    
   </main>
 
 <!-- footer -->
