--- a/index.html
+++ b/index.html
@@ -71,23 +71,23 @@
             <ul class="habit-list">
               <li class="habit-items" id="habit-2">
                 <h2 class="habit-title">第2の習慣:終わりを思い描くことから始める</h2>
-                <p class="habit-contents">①どのような人間になりたい  か<br>②人生を通じて何をしたいのか<br>
+                <p class="habit-contents">①どのような人間になりたいのか<br>②人生を通じて何をしたいのか<br>
                     ③それらの土台となるような価値観はなにか</p>
               </li>
               <li class="habit-items" id="habit-4">
                 <h2 class="habit-title">第4の習慣:Win-Winを考える</h2>
-                <p class="habit-contents">お互い同士の利益になるよ  な結果を見つけようとする考え方と姿勢</p>
+                <p class="habit-contents">お互い同士の利益になるような結果を見つけようとする考え方と姿勢</p>
               </li>
               <li class="habit-items" id="habit-6">
                 <h2 class="habit-title">第6の習慣:シナジーをつくりだす</h2>
-                <p class="habit-contents">①お互いが自立し合っている  <br>②win-winを考えられる事<br>③お互いが違いを受け入  尊重し合っている事</p>
+                <p class="habit-contents">①お互いが自立し合っている  <br>②win-winを考えられる事<br>③お互いが違いを受け入れ尊重し合っている事</p>
               </li>
             </ul>
           </div>
         </div>
       </div>
     </section>
-    
+
   </main>
 
 <!-- footer -->
