100秒スピーチmain2/3完成

--- a/assets/speech/index.html
+++ b/assets/speech/index.html
@@ -46,39 +46,160 @@
     <article class="main-wapper">
       <h1 class="speech-title">100秒スピーチ</h1>
       <scction class="speech-section">
-        <h2 class="speech-subtitle">100秒スピーチへようこそ</h2>
+        <h2 class="speech-subtitle">仲間の居場所を作らずして自分の居場所なし</h2>
         <div class="speech-box">
           <div class="speech-items">
             <figure>
-              <img class="speech-icon" src="../img/yoshitaka.igarasi-speech.png" alt="">
+              <img class="speech-icon" src="../img/yuta.honnjyo-speech.png" alt="">
             </figure>
-            <p class="speech-contents">どうも、がらしです。本物のがらしです///<br>
-              「自ら機会を創り出し、機会によって自らを変えよ」</p>
+            <div class="speech-content">
+              <h3>本庄裕大</h3>
+              <p class="speech-contents-show">まず最初に僕はを</p><p class="speech-contents-hide">「仲間の居場所を作るサポートせずして自分の居場所なし」と定義し直しました。
+                今回のスピーチでは居場所がある状態の定義をした上で仲間の居場所を作るサポートの定義について話したいと思います。
+                そもそも居場所があるとは何か？
+                特定のコミュニティにおいて居場所があるという状態はそのコミュニティに対して後ろめたさを感じないかつ自分の役割を見出すことができる状態だと僕は思います。
+                なぜこう思ったか自分のPOSSEでの話をします。
+                ph1は週10時間確保することがあまりできずだいぶ遅れをとっていました。大して忙しくないのに忙しいからと言い訳をして勉強をしていませんでした。同期や先輩方はみんな優しいのに居心地が悪かったです。それはPOSSEがプログラミング学習コミュニティなのに十分な学習時間を確保できていないという後ろめたさが原因です。
+                ph2の序盤は遅れを全力で取り戻しました。それ以降、後ろめたさは感じなくなり居心地は良くなりました。しかし、居場所があるとは感じませんでした。なぜならその時点では特にPOSSE内での役割はなく、プログラミングを勉強しているただのPOSSEの一員でしかなかったからです。
+                ph2の終盤から教えることを始めました。教え方自体は下手ですが、色んな人が頼ってくれるようになりました。自分のPOSSE内の役割はこれなんだなと認識しました。
+                今の話をまとめると居場所を得る過程は３段階に分けることができます。
+                第一段階：後ろめたさあり役割なし
+                第二段階：後ろめたさなし役割なし
+                第三段階：後ろめたさなし役割あり
+                そして仲間の居場所を作るサポートの定義は
+                第一段階から第二段階に引き上げることである。
+                第二段階から第三段階はそれぞれの個人が自分で役割を見つけるものだと思います。
+                皆さんにとってPOSSEでの活動が最優先事項かはわかりませんが、POSSE内での自分の役割を考えてみてはいかがでしょうか？その最初のステップとしてカリキュラムに遅れないというのがあります。POSSEには第一段階から第二段階に引き上げてくれる頼れる同期や先輩がたくさんいます。頼りまくってください。</p>
+            </div>
           </div>
+
           <div class="speech-items">
             <figure>
               <img class="speech-icon" src="../img/hiroki.ogawa-speech.jpeg" alt="">
             </figure>
-            <p>「仲間の居場所を作らずして自分の居場所なし」<br>
-              こんにちは小川広樹です。</p>
+            <div  class="speech-content">
+              <h3>小川ひろき</h3>
+              <p class="speech-contents-show">
+                こんにちは</p><p class="speech-contents-hide">小川広樹です。私は体育会の準硬式野球部という部活に入っておりなかなかPOSSEの活動に参加できていないのではじめましての人も多いと思います。せっかくですので、この際名前だけでも覚えていただけると嬉しいです。
+                今回このお題を与えられて考えた時に正直このようなことをちゃんと考えたことがなかったのでよくわかりませんでした。なので的外れのことを言ったりかなり抽象的なことを言うかもしれませんが許してほしいです。
+                私は部活ではコーチをしています。コーチをやっている中で僕は選手がプレーしやすい環境をつくり日本一のチームなれるように考えながら活動に取り組んでいます。そして僕が自分で考えるに準硬式野球部において僕の役割はこれだと考えています。そのために面談をやったり定期的にミーティングを開いたりして頑張ってます。
+                人の性格は生まれつきある気質、それから狭義の性格、習慣的性格、役割性格の4層から構造されます。狭義の性格は人格ともいわれ幼少期までには形成されます。「習慣的性格」とは、日常の様々な人々の交流や経験を通じて、徐々に形成されてゆく性格です。ここで注目してほしいのは役割性格です。役割性格とは社会での様々な場面・状況に適応するために形成された性格で、状況に応じて瞬間的に変えることができる性格です。私の準硬式野球においての役割性格はより良く強い組織を作ることを考えています。またその面でチームから必要とされていると思っています。
+                このお題に沿っていうなら仲間の居場所を作るという自分の役割性格を作ることで自分の存在価値をしめすことができ自分の居場所ができるのではないかと思いました。</p>
+            </div>
           </div>
-        </div>
-        <div class="speech-box">
+
           <div class="speech-items">
             <figure>
               <img class="speech-icon" src="../img/yuma.tukagaoshi-speech.png" alt="">
             </figure>
-            <p>「仲間の居場所を作らずして自分の居場所なし」<br>
-              居場所を作るとは、弱みや欠点も受け入れ素で話し合える関係を築くことだと考えます。</p>
+            <div  class="speech-content">
+              <h3>塚越雄真</h3>
+              <p class="speech-contents-show">「
+                居場所を</p><p  class="speech-contents-hide">作るとは、弱みや欠点も受け入れ素で話し合える関係を築くことだと考えます。
+                このような考えに至った経緯を私自身の経験に沿って話したいと思います。
+                私は今までバスケや駅伝といったチームスポーツを経験してきました。
+                その活動の中で、モチベーションは高いが上手くチームに溶け込むことができない仲間がいたため、相談に乗るといくつか本音が見えてきました。
+                それは、、、
+                ・バスケは好きだけど、ミスばっかりでチームに迷惑かけているから…
+                ・内向的でコミュニケーションとるのが苦手だから…
+                ・キツくなるとあきらめてしまう性格だから…
+                といった自分にとってマイナスの条件をつけて自分の居場所を見失っていたのでした。
+                つまり、「自分の中に弱い部分はあってはいけない」という心の状態を、「チームの中に弱い自分はいてはいけない」という居場所のない現実に投影していたのです。
+                後日、その弱みをどうしたら強みにすることができるのか解決策を他のチームメイトで考え、普段の生活や練習でも実行していきました。
+                その結果、仲間は弱みも受け入れてくれる環境に居場所を感じ、生き生きと一緒にバスケ人生を送ることができました。
+                このように、仲間の居場所を作ること  =>  素で話し合える仲間の”一員”としての居場所、同じ目標を掲げた”一員”としての居場所　といった自分の居場所もそれに伴って確立していくと考えます。
+                上記の経験は今後のチーム開発でも同様のことが言えると思います。
+                自分の弱みを弱みと思わず、打ち明けることで受け入れてくれる仲間がPOSSEにはたくさんいます。
+                そして、よこもくやたてもく、かださぽといった悩みや不安を受け入れてくれる先輩方や同期、信頼を置くことのできる”居場所”があります。
+                したがって、仲間の居場所というのはすでにPOOSEにはたくさん作られていると思います。
+                これからは人とつながる機会をより一層大事にし、安心して居られる居場所作りをハッカソンなどを通して作り上げていきたいです。</p>
+            </div>
+          </div>
+        </div>
+      </scction>
+
+
+      <scction class="speech-section">
+        <h2 class="speech-subtitle">教えることは教わること</h2>
+        <div class="speech-box"> 
+        <div class="speech-items">
+            <figure>
+              <img class="speech-icon" src="../img/chiyoko.hayashi-speech.png" alt="">
+            </figure>
+            <div  class="speech-content">
+              <h3>林千翼子</h3>
+              <p class="speech-contents-show">教えることは教わること
+                  私の中の「教える」の概念を紹介します</p><p class="speech-contents-hide">
+                  P：教えるとは、相手に「できる」ようにすること、わかってもらうだけじゃだめ
+                  R：知る、わかる、できる、教える
+                  E：https://globis.jp/article/5149
+                  　・インプット教材は「知る」
+                  　・quizy/websiteは「わかる」
+                  　・webappやハッカソンは「できる」
+                  P：教えるとは、相手に「できる」ようにすること、わかってもらうだけじゃだめ
+                  　　教える時は、「わかった？」じゃなくて、「じゃあやってみよう」でできるかどうかまでみてあげよう</p>
+            </div>
           </div>
           <div class="speech-items">
             <figure>
-              <img class="speech-icon" src="../img/miu.marukawa.png" alt="">
+              <img class="speech-icon" src="../img/kazuki.iwashiro-speech.jpeg" alt="">
             </figure>
-            <p>「仲間の居場所を作らずして自分の居場所なし」<br>
-              居場所を作るとは、弱みや欠点も受け入れ素で話し合える関係を築くことだと考えます。</p>
+            <div class="speech-content">
+              <h3>岩城和輝</h3>
+              <p class="speech-contents-show">教えることは教わること
+                そもそも教えるってなんだろう？って考えました。</p><p class="speech-contents-hide">
+                →自分を見つめ直すことだと考えます。
+                どういうことかというと…
+                ex)tan1°は有理数か
+                この問題を教えるとします
+                すると
+                この時教える側は…（少なくとも）
+                ・有理数とは
+                ・無理数とは
+                ・背理法って何
+                ・倍角の公式、加法定理って何？
+                ・そもそもtanって何、どう定義されるの？
+                などなどがあります
+                以上からわかるように、たった１問を教えるだけでも多くのことを理解している必要があります。
+                ここで最初の教えること＝教わることにもどります。今あげたように教えようとした時、必要な能力、タスク、理解しておくべき点が明確になります。これって、自分に何が必要かを“教わってる“っていえません？、そしてもし教えることができたら、自分がどこまで理解しているかを“教わること“になるよね。もし教えられなかった場合でも、どこを理解してないかを（教わる側、生徒？）に“教わっている“っていえるよね。
+                なにが言いたいかって言うと、何かを教えるって言うのは教わることが必ず関わっている。（表裏一体、ついて回る）posseで当てはめると、今自分達3.0期ってわからないことだらけだけど、こんな簡単なこと先輩に聞けない、こんなこと聞くのは逆に先輩に失礼、先輩の時間を奪っちゃうから聞きにくい、とか思って先輩に聞け辛いけど、その僕たちが教わることも先輩たちに“教える“ことに繋がってることだから、怖がらずに積極的に先輩にきこー！！！</p>
+            </div>
+          </div>
+
+ 
+
+          <div class="speech-items">
+            <figure>
+              <img class="speech-icon" src="../img/michiko.noro-speech.jpeg" alt="">
+            </figure>
+            <div  class="speech-content">
+              <h3>野呂美智子</h3>
+              <p class="speech-contents-show">
+                「教えることは教わること」
+                  私は、「教える」という言葉を聞くと、やはり「学校の先生」をイメージします。</p><p  class="speech-contents-hide">
+                  しかし、私は「学校の先生」から教わったという実感を得たことはあまりありません。
+                  それはなぜだろうと考えた時にたどり着いたのは、私が出会った多くの先生は、ただ「知識を与えただけ」だったという答えです。
+                  一方的に、漢字や公式、知識を「情報」として与えられただけで、「教育」という「教え育む」の根幹的な部分をすっ飛ばされたように感じます。
+                  ただ情報を得るだけ、与えるだけならば、ロボットやインターネットで十分なはずです。
+                  ではなぜ、この５G時代に人間の教師が必要とされるのでしょうか。
+                  私は「教える」とは「ただ与えるだけ」ではなく、生徒側の「答え」を引き出すことにあるのではないかと思います。
+                  数学のように、答えは一つであっても導き出し方は複数あるものであれば、教師が導き出し方の答えを決めるのではなく、いくつかの知識ややり方を与えた中で、自分で導き出す方が、生徒の学びになるはずです。
+                  国語であれば、筆者の考えや意見が読み取れる部分がここだと限定するのではなく、生徒がなぜそこに筆者の意図があったのかをしっかりと考えるように問いを投げかける方が、生徒の学習意欲もますでしょう。
+                  その中で、生徒が出した答えが「教える側」にとって全く新しいものである場合があります。公式は同じでも、その公式を使うに至った考えは違うかもしれません。
+                  生徒が今の課題に疑問を持ったり、躓いたりすれば、教え方に不足があったり、改善点が必要だと気付かされるきっかけにもなるでしょう。
+                  このように、私が描く「教える側」と「教わる側」とは常にWin-Winの関係であり、その力関係が一方通行になっていない状態、しっかりとコミュニケーションが取れている状態です。
+                  私が出会ってきた先生方の大部分は、一方通行の教え方しかしてくれませんでした。
+                  しかし、POSSEは違います。
+                  縦もくの先輩方は勿論、息をするのと同じくらい当たり前に教えてくれます。
+                  POSSEは色んな方々の力関係が対等で、「教える」「教わる」のキャッチボールができています。
+                  そのキャッチボールのボールがプログラミングというのもまた良い点の一つだと思います。
+                  答えややり方が複数あるけれど、間違いは間違いとしてしっかりある。
+                  それが「教える」側と「教わる」側とでキャッチボールができている理由でもあるのでしょう。
+                  今は「教わる」側の立場が多い私ですが、3.5期生が入ってきたら「教える」側でプログラミング・人格の両方を深めていきたいと思います。</p>
+            </div>
           </div>
         </div>
+
       </scction>
     </article>
   </main>
