1日目試作品

--- a/assets/speech/index.html
+++ b/assets/speech/index.html
@@ -42,7 +42,7 @@
   </header>
 
 <!-- main -->
-  <main>
+  <main class="speech-main">
     <article class="main-wapper">
       <h1 class="speech-title">100秒スピーチ</h1>
       <scction class="speech-section">
@@ -54,7 +54,7 @@
             </figure>
             <div class="speech-content">
               <h3>本庄裕大</h3>
-              <p class="speech-contents-show">まず最初に僕はを</p><p class="speech-contents-hide">「仲間の居場所を作るサポートせずして自分の居場所なし」と定義し直しました。
+              <p class="speech-contents-show">まず最初に僕はを「仲間の居場所を作るサポートせずして自分の居場所なし」と定義し直しました。</p><p class="speech-contents-hide">
                 今回のスピーチでは居場所がある状態の定義をした上で仲間の居場所を作るサポートの定義について話したいと思います。
                 そもそも居場所があるとは何か？
                 特定のコミュニティにおいて居場所があるという状態はそのコミュニティに対して後ろめたさを感じないかつ自分の役割を見出すことができる状態だと僕は思います。
@@ -80,7 +80,7 @@
             <div  class="speech-content">
               <h3>小川ひろき</h3>
               <p class="speech-contents-show">
-                こんにちは</p><p class="speech-contents-hide">小川広樹です。私は体育会の準硬式野球部という部活に入っておりなかなかPOSSEの活動に参加できていないのではじめましての人も多いと思います。せっかくですので、この際名前だけでも覚えていただけると嬉しいです。
+                こんにちは小川広樹です。私は体育会の準硬式野球部とい</p><p class="speech-contents-hide">う部活に入っておりなかなかPOSSEの活動に参加できていないのではじめましての人も多いと思います。せっかくですので、この際名前だけでも覚えていただけると嬉しいです。
                 今回このお題を与えられて考えた時に正直このようなことをちゃんと考えたことがなかったのでよくわかりませんでした。なので的外れのことを言ったりかなり抽象的なことを言うかもしれませんが許してほしいです。
                 私は部活ではコーチをしています。コーチをやっている中で僕は選手がプレーしやすい環境をつくり日本一のチームなれるように考えながら活動に取り組んでいます。そして僕が自分で考えるに準硬式野球部において僕の役割はこれだと考えています。そのために面談をやったり定期的にミーティングを開いたりして頑張ってます。
                 人の性格は生まれつきある気質、それから狭義の性格、習慣的性格、役割性格の4層から構造されます。狭義の性格は人格ともいわれ幼少期までには形成されます。「習慣的性格」とは、日常の様々な人々の交流や経験を通じて、徐々に形成されてゆく性格です。ここで注目してほしいのは役割性格です。役割性格とは社会での様々な場面・状況に適応するために形成された性格で、状況に応じて瞬間的に変えることができる性格です。私の準硬式野球においての役割性格はより良く強い組織を作ることを考えています。またその面でチームから必要とされていると思っています。
@@ -95,7 +95,7 @@
             <div  class="speech-content">
               <h3>塚越雄真</h3>
               <p class="speech-contents-show">「
-                居場所を</p><p  class="speech-contents-hide">作るとは、弱みや欠点も受け入れ素で話し合える関係を築くことだと考えます。
+                居場所を作るとは、弱みや欠点も受け入れ素で話し合える関係を築くことだと考えます。</p><p  class="speech-contents-hide">
                 このような考えに至った経緯を私自身の経験に沿って話したいと思います。
                 私は今までバスケや駅伝といったチームスポーツを経験してきました。
                 その活動の中で、モチベーションは高いが上手くチームに溶け込むことができない仲間がいたため、相談に乗るといくつか本音が見えてきました。
@@ -199,9 +199,106 @@
             </div>
           </div>
         </div>
+      </scction>
 
+      <scction class="speech-section">
+        <h2 class="speech-subtitle">本音の対話なくして最高のチームなし</h2>
+        <div class="speech-box"> 
+          <div class="speech-items">
+            <figure>
+              <img class="speech-icon" src="../img/ayumi.fujii-speech.png" alt="">
+            </figure>
+            <div  class="speech-content">
+              <h3>藤井愛弓</h3>
+              <p class="speech-contents-show">「本音の対話なくして最高のチームなし」私自身、本音の対話がとっても苦手。</p><p class="speech-contents-hide">気になることがあっても、反対して相手に嫌な思いをさせたくないな、嫌われたくないな、で話せないことが多い。
+                本音の対話ができていないと、なぜ最高のチームになれないのか？
+                →本音の対話ができていないことによってどんな悪いことが起きる？
+                を考えてみました。
+                
+                ・話してることが本当に思ってることとズレてるっていつかわかってしまう
+                →信頼関係が崩れるかも
+                ・それぞれがモヤモヤしたものを抱えたままになる
+                →チーム全体のやる気低下
+                ・実は違う分担の方がみんな良かったってこともあり得る
+                →効率悪い
+                ・相手を気遣ったり反応を伺ったりを続けていると疲れちゃう
+                →表面上の付き合い&居心地の良くない関係に
+                
+                結論。
+                相手に嫌な思いをさせたくないからといって黙っていたり、思っているのと違うことを言ってたら、自分の中での消化不良とともに、チーム全体にも良くない影響を与えちゃうかもしれない。思い切って話してみて、相手の話も受け入れて、両方を踏まえてより良い結論を出すのがベスト。
+                ＝本音の対話があってはじめて最高のチームになる
+                ＝本音の対話なくして最高のチームなし！v
+                  </p>
+            </div>
+          </div>
+          <div class="speech-items">
+            <figure>
+              <img class="speech-icon" src="../img/yudai.inose-speech.png" alt="">
+            </figure>
+            <div class="speech-content">
+              <h3>猪瀬雄大</h3>
+              <p class="speech-contents-show">本音の対話なくして最高のチームなし
+                最高のチームを作る上で隠してしまいがちな本音ってなんだろう？</p><p class="speech-contents-hide">Posseは周知の通り、みんなでプログラミングの技術向上と人格面の向上を図るコミュニティ→
+                  ならば隠しちゃいけない本音とは
+                  技術面：理解度や能力を隠さないこと、
+                  例：わかんないことをわかる！って言ってしまう
+                  精神面：チームメンバーへの要求や意見を言うこと
+                  例：もっと○○してほしい。
+                  なぜこうなってしまう
+                  →チームメンバー間で能力に差を感じて、引け目を感じるから？あんまり話したことがないと本音を言いづらい？　自分のプライドが邪魔をする？　雰囲気が崩れることへの恐怖？
+                  特に３.0期生 カリキュラムや新人ハッカソンで　基本みんな同じことやってる　今後のハッカソンなりでチームで一つのものを作ることが増えてくると
+                  自分の得意分野や苦手分野、その他個性や性格、能力が明らかになっていき、チーム内で自分が請け負う責任の幅が広がる
+                  本音で話せないことがあると大きな弊害、チーム崩壊に繋がる
+                  逆に
+                  できないことを曝け出せるチームは強い→それを考慮した上での行動ができる
+                  ただ上辺の関係で和気藹々とやるのとは違う
+                  本音の会話をするために
+                  自己開示をする
+                  自分から中身をさらけだす。
+                  自分の人となりや今の状態がわかるエピソードを隠さない
+                  その上で相手の話にも興味を持ってあげる。本音の会話を引き出す
+                  相手に何かしてくれたら自分も何かしなきゃと感じる
+                  心理学用語で返報性の原理
+                  横もくが変わって新チームが構築されつつある今、抱えている疑問があったらまず横もくの人に聞いてみよう！一人で抱えるよりも曝け出す方が案外ことがうまく運ぶかも
+               </p>
+            </div>
+          </div>
+
+ 
+
+          <div class="speech-items">
+            <figure>
+              <img class="speech-icon" src="../img/gaku.inoue-speech.png" alt="">
+            </figure>
+            <div  class="speech-content">
+              <h3>井上岳</h3>
+              <p class="speech-contents-show">
+                本音の対話なくして最高のチームなし
+                チームとしての活動が終わってもメンバーでの交流があったり、思い出話をするようなチームが最高のチームだと思う。
+                </p><p class="speech-contents-hide">最高のチームとは？
+                  →一番思い出や印象が濃いチーム
+                  思い出や印象が濃いというのは、いかに感情が動かされるかによると思う。
+                  相手の感情を動かしたり、感情が動かされたりするためには本音の対話が必要。よって、本音の対話なくして最高のチームなしだと思う。
+                  どうやったら本音の対話ができるのか。
+                  本音が出る時は相手を信頼しているときなので、
+                  信頼していれば本音が出て、本音が出れば信頼関係が
+                  生まれて、また本音が出るという良い循環が生まれる。
+                  よって、信頼が本音での対話のポイントになる。
+                  結論としては、自分が相手を信頼すること、または相手に信頼されるような人であることが本音の対話をする第一歩だと思う。
+                  みんながその意識をすれば、どこかから本音が出てくるので自然と本音の対話が進んで、最高のチームができると思う。
+                  相手を信頼する、信頼されるようになる方法は今後の人格学習で身につけていきたい。
+                  日菜さんの、本音の対話にはコミュ量を確保することが大事という考えがとてもしっくりきた。ありがとうございます。
+                </p>
+            </div>
+          </div>
+        </div>
       </scction>
     </article>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
   </main>
 
 <!-- footer -->
