--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
   <main class="main-section">
     <section class="seventh-habit">
       <div class="background">
-        <img src="./assets/img/covey.png" alt="" >
         <h1 class="top-title">7つの習慣</h1>
+        <img src="./assets/img/covey.png" alt="" >
         <div class="habit-both-side">
           <div class="habit-left-side">
             <ul class="habit-list">
@@ -83,6 +83,7 @@
                 <p class="habit-contents">①お互いが自立し合っている  <br>②win-winを考えられる事<br>③お互いが違いを受け入れ尊重し合っている事</p>
               </li>
             </ul>
+    
           </div>
         </div>
       </div>
@@ -106,6 +107,8 @@
 
 <!-- footer -->
   <footer>
+    <div class="footer-under-line"></div>
+    
     <section class="footer">
       <div class="footer-logo">
         <img src="./assets/img/logo.png" alt="POSSE">
