--- a/assets/speech/index.html
+++ b/assets/speech/index.html
@@ -70,6 +70,9 @@
                 第一段階から第二段階に引き上げることである。
                 第二段階から第三段階はそれぞれの個人が自分で役割を見つけるものだと思います。
                 皆さんにとってPOSSEでの活動が最優先事項かはわかりませんが、POSSE内での自分の役割を考えてみてはいかがでしょうか？その最初のステップとしてカリキュラムに遅れないというのがあります。POSSEには第一段階から第二段階に引き上げてくれる頼れる同期や先輩がたくさんいます。頼りまくってください。</p>
+                <div>
+                  <button class="speech-more"></button>
+                </div>
             </div>
           </div>
 
@@ -85,6 +88,9 @@
                 私は部活ではコーチをしています。コーチをやっている中で僕は選手がプレーしやすい環境をつくり日本一のチームなれるように考えながら活動に取り組んでいます。そして僕が自分で考えるに準硬式野球部において僕の役割はこれだと考えています。そのために面談をやったり定期的にミーティングを開いたりして頑張ってます。
                 人の性格は生まれつきある気質、それから狭義の性格、習慣的性格、役割性格の4層から構造されます。狭義の性格は人格ともいわれ幼少期までには形成されます。「習慣的性格」とは、日常の様々な人々の交流や経験を通じて、徐々に形成されてゆく性格です。ここで注目してほしいのは役割性格です。役割性格とは社会での様々な場面・状況に適応するために形成された性格で、状況に応じて瞬間的に変えることができる性格です。私の準硬式野球においての役割性格はより良く強い組織を作ることを考えています。またその面でチームから必要とされていると思っています。
                 このお題に沿っていうなら仲間の居場所を作るという自分の役割性格を作ることで自分の存在価値をしめすことができ自分の居場所ができるのではないかと思いました。</p>
+                <div>
+                  <button class="speech-more"></button>
+                </div>
             </div>
           </div>
 
@@ -113,6 +119,9 @@
                 そして、よこもくやたてもく、かださぽといった悩みや不安を受け入れてくれる先輩方や同期、信頼を置くことのできる”居場所”があります。
                 したがって、仲間の居場所というのはすでにPOOSEにはたくさん作られていると思います。
                 これからは人とつながる機会をより一層大事にし、安心して居られる居場所作りをハッカソンなどを通して作り上げていきたいです。</p>
+                <div>
+                  <button class="speech-more"></button>
+                </div>
             </div>
           </div>
         </div>
@@ -138,6 +147,9 @@
                   　・webappやハッカソンは「できる」
                   P：教えるとは、相手に「できる」ようにすること、わかってもらうだけじゃだめ
                   　　教える時は、「わかった？」じゃなくて、「じゃあやってみよう」でできるかどうかまでみてあげよう</p>
+                  <div>
+                    <button class="speech-more"></button>
+                  </div>
             </div>
           </div>
           <div class="speech-items">
@@ -163,6 +175,9 @@
                 以上からわかるように、たった１問を教えるだけでも多くのことを理解している必要があります。
                 ここで最初の教えること＝教わることにもどります。今あげたように教えようとした時、必要な能力、タスク、理解しておくべき点が明確になります。これって、自分に何が必要かを“教わってる“っていえません？、そしてもし教えることができたら、自分がどこまで理解しているかを“教わること“になるよね。もし教えられなかった場合でも、どこを理解してないかを（教わる側、生徒？）に“教わっている“っていえるよね。
                 なにが言いたいかって言うと、何かを教えるって言うのは教わることが必ず関わっている。（表裏一体、ついて回る）posseで当てはめると、今自分達3.0期ってわからないことだらけだけど、こんな簡単なこと先輩に聞けない、こんなこと聞くのは逆に先輩に失礼、先輩の時間を奪っちゃうから聞きにくい、とか思って先輩に聞け辛いけど、その僕たちが教わることも先輩たちに“教える“ことに繋がってることだから、怖がらずに積極的に先輩にきこー！！！</p>
+                <div>
+                  <button class="speech-more"></button>
+                </div>
             </div>
           </div>
 
@@ -196,6 +211,9 @@
                   答えややり方が複数あるけれど、間違いは間違いとしてしっかりある。
                   それが「教える」側と「教わる」側とでキャッチボールができている理由でもあるのでしょう。
                   今は「教わる」側の立場が多い私ですが、3.5期生が入ってきたら「教える」側でプログラミング・人格の両方を深めていきたいと思います。</p>
+                  <div>
+                    <button class="speech-more"></button>
+                  </div>
             </div>
           </div>
         </div>
@@ -229,6 +247,9 @@
                 ＝本音の対話があってはじめて最高のチームになる
                 ＝本音の対話なくして最高のチームなし！v
                   </p>
+                  <div>
+                    <button class="speech-more"></button>
+                  </div>
             </div>
           </div>
           <div class="speech-items">
@@ -259,8 +280,11 @@
                   その上で相手の話にも興味を持ってあげる。本音の会話を引き出す
                   相手に何かしてくれたら自分も何かしなきゃと感じる
                   心理学用語で返報性の原理
-                  横もくが変わって新チームが構築されつつある今、抱えている疑問があったらまず横もくの人に聞いてみよう！一人で抱えるよりも曝け出す方が案外ことがうまく運ぶかも
-               </p>
+                  横もくが変わって新チームが構築されつつある今、抱えている疑問があったらまず横もくの人に聞いてみよう！一人で抱えるよりも曝け出す方が案外ことがうまく運ぶかも</p>
+                  <div>
+                    <button class="speech-more"></button>
+                  </div>
+
             </div>
           </div>
 
@@ -289,6 +313,9 @@
                   相手を信頼する、信頼されるようになる方法は今後の人格学習で身につけていきたい。
                   日菜さんの、本音の対話にはコミュ量を確保することが大事という考えがとてもしっくりきた。ありがとうございます。
                 </p>
+                <div>
+                  <button class="speech-more"></button>
+                </div>
             </div>
           </div>
         </div>
