speechもっと見る変更

--- a/assets/speech/index.html
+++ b/assets/speech/index.html
@@ -54,8 +54,8 @@
             </figure>
             <div class="speech-content">
               <h3>本庄裕大</h3>
-              <p class="speech-contents-show">まず最初に僕はを「仲間の居場所を作るサポートせずして自分の居場所なし」と定義し直しました。</p><p class="speech-contents-hide">
-                今回のスピーチでは居場所がある状態の定義をした上で仲間の居場所を作るサポートの定義について話したいと思います。
+              <p class="speech-contents-show">まず最初に僕はを「仲間の居場所を作るサポートせずして自分の居場所なし」と</p><p class="speech-contents-hide">
+                定義し直しました。今回のスピーチでは居場所がある状態の定義をした上で仲間の居場所を作るサポートの定義について話したいと思います。
                 そもそも居場所があるとは何か？
                 特定のコミュニティにおいて居場所があるという状態はそのコミュニティに対して後ろめたさを感じないかつ自分の役割を見出すことができる状態だと僕は思います。
                 なぜこう思ったか自分のPOSSEでの話をします。
@@ -101,8 +101,8 @@
             <div  class="speech-content">
               <h3>塚越雄真</h3>
               <p class="speech-contents-show">「
-                居場所を作るとは、弱みや欠点も受け入れ素で話し合える関係を築くことだと考えます。</p><p  class="speech-contents-hide">
-                このような考えに至った経緯を私自身の経験に沿って話したいと思います。
+                居場所を作るとは、弱みや欠点も受け入れ素で話し合える関係を築くことだ</p><p  class="speech-contents-hide">
+                と考えます。このような考えに至った経緯を私自身の経験に沿って話したいと思います。
                 私は今までバスケや駅伝といったチームスポーツを経験してきました。
                 その活動の中で、モチベーションは高いが上手くチームに溶け込むことができない仲間がいたため、相談に乗るといくつか本音が見えてきました。
                 それは、、、
@@ -191,8 +191,8 @@
               <h3>野呂美智子</h3>
               <p class="speech-contents-show">
                 「教えることは教わること」
-                  私は、「教える」という言葉を聞くと、やはり「学校の先生」をイメージします。</p><p  class="speech-contents-hide">
-                  しかし、私は「学校の先生」から教わったという実感を得たことはあまりありません。
+                  私は、「教える」という言葉を聞くと、やは</p><p  class="speech-contents-hide">
+                  り。「学校の先生」をイメージします。しかし、私は「学校の先生」から教わったという実感を得たことはあまりありません。
                   それはなぜだろうと考えた時にたどり着いたのは、私が出会った多くの先生は、ただ「知識を与えただけ」だったという答えです。
                   一方的に、漢字や公式、知識を「情報」として与えられただけで、「教育」という「教え育む」の根幹的な部分をすっ飛ばされたように感じます。
                   ただ情報を得るだけ、与えるだけならば、ロボットやインターネットで十分なはずです。
@@ -259,7 +259,7 @@
             <div class="speech-content">
               <h3>猪瀬雄大</h3>
               <p class="speech-contents-show">本音の対話なくして最高のチームなし
-                最高のチームを作る上で隠してしまいがちな本音ってなんだろう？</p><p class="speech-contents-hide">Posseは周知の通り、みんなでプログラミングの技術向上と人格面の向上を図るコミュニティ→
+                最高のチームを作る上で隠してしまいが</p><p class="speech-contents-hide">ちな本音ってなんだろう？Posseは周知の通り、みんなでプログラミングの技術向上と人格面の向上を図るコミュニティ→
                   ならば隠しちゃいけない本音とは
                   技術面：理解度や能力を隠さないこと、
                   例：わかんないことをわかる！って言ってしまう
@@ -298,8 +298,8 @@
               <h3>井上岳</h3>
               <p class="speech-contents-show">
                 本音の対話なくして最高のチームなし
-                チームとしての活動が終わってもメンバーでの交流があったり、思い出話をするようなチームが最高のチームだと思う。
-                </p><p class="speech-contents-hide">最高のチームとは？
+                チームとしての活動が終わっても
+                </p><p class="speech-contents-hide">メンバーでの交流があったり、思い出話をするようなチームが最高のチームだと思う。最高のチームとは？
                   →一番思い出や印象が濃いチーム
                   思い出や印象が濃いというのは、いかに感情が動かされるかによると思う。
                   相手の感情を動かしたり、感情が動かされたりするためには本音の対話が必要。よって、本音の対話なくして最高のチームなしだと思う。
