ボディ変更

--- a/assets/event/index.html
+++ b/assets/event/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../css/style.css">
   <title>event-page</title>
 </head>
-<body>
+<body class="event-body">
 
 <!-- header -->
   <header>
@@ -41,7 +41,7 @@
 <!-- main -->
   <main>
   <!-- Vertical Timeline -->
-  <section id="conference-timeline">
+    <section id="conference-timeline">
     <div class="timeline-start">2022</div>
     <div class="conference-center-line"></div>
     <div class="conference-timeline-content">
@@ -114,7 +114,7 @@
   </main>
 
 <!-- footer -->
-  <footer>
+  <footer class="event-footer">
     <div class="footer-under-line"></div>
 
     <section class="footer">
@@ -122,7 +122,7 @@
         <img src="../img/logo.png" alt="POSSE">
       </div>
       <div><a href="https://posse-ap.com/" target="_blank" class="footer-siteinfo">POSSE公式サイト</a></div>
-      <ul class="footer-sns">
+      <ul class="footer-sns event">
         <li class="footer-sns-items">
           <a href="https://twitter.com/posse_program" target="_blank" class="sns-items-link"><i class="u-icon-twitter"></i></a>
         </li>
