--- a/assets/speech/index.html
+++ b/assets/speech/index.html
@@ -7,9 +7,10 @@
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
-  <title>speech-page</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
+
+<title>speech-page</title>
 </head>
 <body>
 
@@ -44,7 +45,16 @@
 <!-- main -->
   <main class="speech-main">
     <article class="main-wapper">
-      <h1 class="speech-title">100秒スピーチ</h1>
+      <div class="speech-top-wapper">
+        <div  class="speech-title">
+          <h1>メンバーの価値観を共有</h1>
+          <h2>100秒スピーチ</h2>
+        </div>
+        <figure>
+          <img class="speech-top-img" src="../img/speech-top.jpg" alt="">
+        </figure>
+      </div>
+
       <scction class="speech-section">
         <h2 class="speech-subtitle">仲間の居場所を作らずして自分の居場所なし</h2>
         <div class="speech-box">
