--- a/assets/speech/index.html
+++ b/assets/speech/index.html
@@ -26,6 +26,9 @@
             <li class="pages-items">
               <a href="https://posse-ap.com/">POSSE公式サイト</a>
             </li>
+            <li class="pages-items">
+              <a href="../../index.html">トップページ</a>
+            </li>
           </ul>
         </nav>
         <nav class="nav-sns">
