hover&link created

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
             <li class="pages-items">
               <a href="https://posse-ap.com/">POSSE公式サイト</a>
             </li>
+            <li class="pages-items">
+              <a href="./index.html">トップページ</a>
+            </li>
           </ul>
+
         </nav>
         <nav class="nav-sns">
           <ul class="sns-list">
@@ -83,7 +87,6 @@
                 <p class="habit-contents">①お互いが自立し合っている  <br>②win-winを考えられる事<br>③お互いが違いを受け入れ尊重し合っている事</p>
               </li>
             </ul>
-    
           </div>
         </div>
       </div>
@@ -92,13 +95,23 @@
     <section class="html-link">
       <ul class="link-list">
         <a href="./assets/speech/index.html">
-          <li class="link-items item1">100秒スピーチ</li>
+          <li class="link-items item1">
+            <p class="items-title">100秒スピーチ<span class="span-arrow">⇒</span></p>
+            <span class="section-label">Sect.1</span>
+          </li>
         </a>
         <a href="./assets/birthday/index.html">
-          <li class="link-items item2">誕生日</li>
+          <li class="link-items item2">
+            <p class="items-title">誕生日<span class="span-arrow">⇒</span></p>
+            <span class="section-label">Sect.2</span>
+          </li>
         </a>
         <a href="./assets/event/index.html">
-          <li class="link-items item3">リアルイベント</li>
+          <li class="link-items item3">
+            <p class="items-title">リアルイベント<span class="span-arrow">⇒</span></p>
+            <span class="section-label">Sect.3</span>
+          </li>
+
         </a> 
       </ul>
     </section>
