--- a/assets/birthday/index.html
+++ b/assets/birthday/index.html
@@ -22,6 +22,9 @@
             <li class="pages-items">
               <a href="https://posse-ap.com/">POSSE公式サイト</a>
             </li>
+            <li class="pages-items">
+              <a href="../../index.html">トップページ</a>
+            </li>
           </ul>
         </nav>
         <nav class="nav-sns">
