link-img created

--- a/index.html
+++ b/index.html
@@ -98,20 +98,48 @@
           <li class="link-items item1">
             <p class="items-title">100秒スピーチ<span class="span-arrow">⇒</span></p>
             <span class="section-label">Sect.1</span>
+            <div class="item-box">
+              <figure class="culture-img mrp-san">
+                <img src="./assets/img/mrp-san.png" alt="">
+              </figure>
+              <div class="item-content">
+                <p class="item-name">森　遥</p>
+                <p class="item-role">副代表・カルチャー局長</p>
+                <p class="item-currage">慶應義塾大学　法学部</p>
+                <p class="item-entrance">2020年入学 1期生</p>
+              </div>
+            </div>
           </li>
         </a>
         <a href="./assets/birthday/index.html">
           <li class="link-items item2">
             <p class="items-title">誕生日<span class="span-arrow">⇒</span></p>
             <span class="section-label">Sect.2</span>
+            <div class="item-box">
+              <figure class="img-decorate">
+                <img src="#" alt="">
+              </figure>
+              <div class="item-content">
+              </div>
+            </div>
           </li>
         </a>
         <a href="./assets/event/index.html">
           <li class="link-items item3">
             <p class="items-title">リアルイベント<span class="span-arrow">⇒</span></p>
             <span class="section-label">Sect.3</span>
+            <div class="item-box">
+              <figure class="culture-img hina-san">
+                <img src="./assets/img/hina-san.png" alt="">
+              </figure>
+              <div class="item-content">
+                <p class="item-name">高橋 日菜</p>
+                <p class="item-role">カルチャー局</p>
+                <p class="item-currage">慶應義塾大学　商学部</p>
+                <p class="item-entrance">2020年入学 1期生</p>
+              </div>
+            </div>
           </li>
-
         </a> 
       </ul>
     </section>
