--- a/assets/event/index.html
+++ b/assets/event/index.html
@@ -22,6 +22,9 @@
             <li class="pages-items">
               <a href="https://posse-ap.com/">POSSE公式サイト</a>
             </li>
+            <li class="pages-items">
+              <a href="../../index.html">トップページ</a>
+            </li>
           </ul>
         </nav>
         <nav class="nav-sns">
@@ -40,6 +43,15 @@
 
 <!-- main -->
   <main>
+    <div class="event-top-wapper">
+      <div  class="event-title">
+        <h1>最高の仲間✖️最高の時間</h1>
+        <h2>リアルイベント</h2>
+      </div>
+      <figure>
+        <img class="event-top-img" src="../img/LINE_ALBUM_220904_2.jpg" alt="">
+      </figure>
+    </div>
   <!-- Vertical Timeline -->
     <section id="conference-timeline">
     <div class="timeline-start">2022</div>
@@ -49,19 +61,31 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <p>新歓ピザパーティー<span class="article-number">01</span></p>
+            <p><span class="article-number">BBQ</span></p>
+            <img class="img-bbq" src="../img/LINE_ALBUM_220904.jpg" alt="">
+            <img class="img-bbq-2" src="../img/LINE_ALBUM_220904_3.jpg" alt="">
+            <img class="img-bbq-3" src="../img/LINE_ALBUM_220904_4.jpg" alt="">
           </div>
-          <span class="timeline-author">John Doe</span>
-        </div>
-        <div class="content-right-container">
-          <div class="content-right">
-            <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. <span class="article-number">02</span></p>
-          </div>
-          <span class="timeline-author">John Doe</span>
+          <span class="timeline-author">いいねボタン</span>
         </div>
         <div class="meta-date">
-          <span class="date">18</span>
-          <span class="month">APR</span>
+          <span class="date">25</span>
+          <span class="month">JUN</span>
+        </div>
+      </div>
+      <!-- // Article -->
+      
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="content-right">
+            <p> <img class="img-kadachoki" src="../img/LINE_ALBUM_220904_1.jpg" alt=""><span class="article-number">かだチョキ</span></p>
+          </div>
+          <span class="timeline-author"></span>
+        </div>
+        <div class="meta-date">
+          <span class="date">24</span>
+          <span class="month">AUG</span>
         </div>
       </div>
       <!-- // Article -->
@@ -70,45 +94,55 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p>
+            <p><img class="img-summerdx" src="../img/LINE_ALBUM_220904_2.jpg" alt=""><span class="article-number">夏のDX</span></p>
           </div>
-          <span class="timeline-author">John Doe</span>
+          <span class="timeline-author"></span>
         </div>
         <div class="content-right-container">
           <div class="content-right">
-            <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. <span class="article-number">02</span></p>
+            <p>　　　　　　最高のイベントだった<span class="article-number">皆の声</span></p>
           </div>
-          <span class="timeline-author">John Doe</span>
+          <span class="timeline-author"></span>
         </div>
         <div class="meta-date">
-          <span class="date">18</span>
-          <span class="month">APR</span>
+          <span class="date">31</span>
+          <span class="month">AUG</span>
         </div>
       </div>
       <!-- // Article -->
-      
+
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
-          <div class="content-left">
-            <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p>
-          </div>
-          <span class="timeline-author">John Doe</span>
-        </div>
         <div class="content-right-container">
           <div class="content-right">
-            <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. <span class="article-number">02</span></p>
+            <p>　　　　　　みんな参加しよう！参加はこちらから<span class="article-number" id="article-number-next">運動会</span></p>
           </div>
-          <span class="timeline-author">John Doe</span>
+          <span class="timeline-author"></span>
         </div>
-        <div class="meta-date">
-          <span class="date">18</span>
-          <span class="month">APR</span>
+        <div class="meta-date" id="meta-date-next">
+          <span class="date">15</span>
+          <span class="month">OCT</span>
         </div>
       </div>
       <!-- // Article -->
+
+            <!-- Article -->
+            <div class="timeline-article">
+              <div class="content-left-container">
+                <div class="content-left">
+                  <p>　　　　　　　みんな参加しよう！参加はこちらから<span class="article-number" id="article-number-next">冬のDX</span></p>
+                </div>
+                <span class="timeline-author"></span>
+              </div>
+              <div class="meta-date" id="meta-date-next">
+                <span class="date">28</span>
+                <span class="month">DEC</span>
+              </div>
+            </div>
+            <!-- // Article -->
+
     </div>
-    <div class="timeline-end">End</div>
+    <div class="timeline-end" id="timeline-end-next">まだまだ続くよ</div>
   </section>
   <!-- // Vertical Timeline -->
   </main>
