--- a/assets/speech/index.html
+++ b/assets/speech/index.html
@@ -50,15 +50,15 @@
     <article class="main-wapper">
       <div class="speech-top-wapper">
         <div  class="speech-title">
-          <h1>メンバーの価値観を共有</h1>
-          <h2>100秒スピーチ</h2>
+          <h1 class="speech-titles-detail">メンバーと価値観共有</h1>
+          <h2 class="speech-titles">100秒スピーチ</h2>
         </div>
         <figure>
           <img class="speech-top-img" src="../img/speech-top.jpg" alt="">
         </figure>
       </div>
 
-      <scction class="speech-section">
+      <section class="speech-section">
         <h2 class="speech-subtitle">仲間の居場所を作らずして自分の居場所なし</h2>
         <div class="speech-box">
           <div class="speech-items">
@@ -138,10 +138,10 @@
             </div>
           </div>
         </div>
-      </scction>
+      </section>
 
 
-      <scction class="speech-section">
+      <section class="speech-section">
         <h2 class="speech-subtitle">教えることは教わること</h2>
         <div class="speech-box"> 
         <div class="speech-items">
@@ -230,9 +230,9 @@
             </div>
           </div>
         </div>
-      </scction>
+      </section>
 
-      <scction class="speech-section">
+      <section class="speech-section">
         <h2 class="speech-subtitle">本音の対話なくして最高のチームなし</h2>
         <div class="speech-box"> 
           <div class="speech-items">
@@ -332,7 +332,28 @@
             </div>
           </div>
         </div>
-      </scction>
+      </section>
+      <section class="speech-forms">
+        <h1 class="form-title">あなたの100秒スピーチ</h1>
+        <form class="from">
+          <div class="speech-form">
+            <label class="label">名前<span class="required">必須</span></label>
+            <input type="text" name="input" autocomplete="name" placeholder="お名前" required="required"/>
+          </div>
+
+          <div class="speech-form">
+           <label class="label">テーマ<span class="required">必須</span></label>
+           <input type="text" name="input" autocomplete="name" placeholder="テーマ" required="required"/>
+          </div>
+          <div class="speech-form">
+            <label class="label">本文<span class="required">必須</span></label>
+            <input type="text" name="input" autocomplete="name" placeholder="本文" required="required"/>
+          </div>
+          <div class="speech-submit">
+            <button type="submit">送信する</button>
+          </div>
+        </form>
+      </section>
     </article>
     <br>
     <br>
