--- a/assets/birthday/index.html
+++ b/assets/birthday/index.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/style.css">
+  <script src="../../assets/scripts/birthday.js" defer></script>
+  <script src="../../assets/scripts/event.js" defer></script>
+  <script src="../../assets/scripts/speech.js" defer></script>
+  <script src="../../assets/scripts/top.js" defer></script>
   <title>birthday-page</title>
 </head>
 <body>
