--- a/assets/event/index.html
+++ b/assets/event/index.html
@@ -15,11 +15,12 @@
 <body class="event-body">
 
 <!-- header -->
-  <header>
+  <header class="top-header" id="js-header">
     <div class="header-section">
       <div class="header-logo">
         <img src="../img/logo.png" alt="POSSE">
       </div>
+      <button class="header-button" id="js-headerButton"></button>
       <div class="nav-lists">
         <nav class="nav-pages">
           <ul class="pages-list">
@@ -31,6 +32,9 @@
             </li>
           </ul>
         </nav>
+        <div class="header-official">
+          <a href="https://posse-ap.com/" class="header-official-link-website"><i class="u-icon-link"></i></a>
+        </div>
         <nav class="nav-sns">
           <ul class="sns-list">
             <li class="sns-items">
@@ -152,7 +156,7 @@
   </main>
 
 <!-- footer -->
-  <footer class="event-footer">
+  <footer class="event-footer top-footer">
     <div class="footer-under-line"></div>
 
     <section class="footer">
