--- a/assets/speech/index.html
+++ b/assets/speech/index.html
@@ -19,11 +19,12 @@
 <body>
 
 <!-- header -->
-  <header>
+  <header class="top-header" id="js-header">
     <div class="header-section">
       <div class="header-logo">
         <img src="../img/logo.png" alt="POSSE">
       </div>
+      <button class="header-button" id="js-headerButton"></button>
       <div class="nav-lists">
         <nav class="nav-pages">
           <ul class="pages-list">
@@ -35,6 +36,9 @@
             </li>
           </ul>
         </nav>
+        <div class="header-official">
+          <a href="https://posse-ap.com/" class="header-official-link-website"><i class="u-icon-link"></i></a>
+        </div>
         <nav class="nav-sns">
           <ul class="sns-list">
             <li class="sns-items">
@@ -367,7 +371,7 @@
   </main>
 
 <!-- footer -->
-  <footer>
+  <footer class="top-footer">
     <div class="footer-under-line"></div>
     
     <section class="footer">
