--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </ul>
         </nav>
         <div class="header-official">
-          <a href="https://posse-ap.com/" class="p-header__official__link--website">POSSE 公式サイト<i class="u-icon__link"></i></a>
+          <a href="https://posse-ap.com/" class="header-official-link-website"><i class="u-icon-link"></i></a>
         </div>
         <nav class="nav-sns">
           <ul class="sns-list">
