--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="./assets/scripts/event.js" defer></script>
   <script src="./assets/scripts/speech.js" defer></script>
   <script src="./assets/scripts/top.js" defer></script>
+  <script src="./assets/scripts/jquery-3.6.1.min.js" defer></script>
   <title>Top-page</title>
 </head>
 <body>
